[gd_scene load_steps=11 format=3 uid="uid://y6raidijduyh"]

[ext_resource type="Script" path="res://gui/voices/operators/SiOPMOperatorDeck.gd" id="1_t5m5s"]
[ext_resource type="PackedScene" uid="uid://kvxy6miofpxj" path="res://gui/components/KnobControl.tscn" id="2_b8kmf"]
[ext_resource type="PackedScene" uid="uid://xob01bdx0r2f" path="res://gui/components/OptionFlipper.tscn" id="2_cosrf"]
[ext_resource type="PackedScene" uid="uid://dgr0kta03k8ic" path="res://gui/components/RollerKnob.tscn" id="3_fp7fs"]
[ext_resource type="PackedScene" uid="uid://gprht0fu6hyh" path="res://gui/components/GlowButton.tscn" id="3_la6qn"]
[ext_resource type="Shader" path="res://gui/components/RollerPanel.gdshader" id="4_ao5p7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7wdfr"]
resource_local_to_scene = true
shader = ExtResource("4_ao5p7")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lnbte"]
resource_local_to_scene = true
shader = ExtResource("4_ao5p7")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qqnui"]
resource_local_to_scene = true
shader = ExtResource("4_ao5p7")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_66uhm"]
resource_local_to_scene = true
shader = ExtResource("4_ao5p7")

[node name="SiOPMOperatorDeck" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"OperatorDeck"
script = ExtResource("1_t5m5s")

[node name="Layout" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ShapeBox" type="HBoxContainer" parent="Layout"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="ShapeFlipper" parent="Layout/ShapeBox" instance=ExtResource("2_cosrf")]
unique_name_in_owner = true
custom_minimum_size = Vector2(190, 32)
layout_mode = 2
size_flags_vertical = 4
options = Array[String](["BASIC WAVE", "NOISE", "MA3 WAVE", "PULSE", "PULSE SPIKE", "RAMP"])
option_colors = Array[Color]([Color(0.568395, 0.339248, 0.627417, 1), Color(0.752918, 0.317176, 0.290403, 1), Color(0.665389, 0.47658, 0.168722, 1), Color(0.192105, 0.41115, 0.2929, 1), Color(0.247642, 0.496885, 0.761571, 1), Color(0.618955, 0.223453, 0.346477, 1)])

[node name="Shapes" type="HBoxContainer" parent="Layout/ShapeBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="GlowButton0" parent="Layout/ShapeBox/Shapes" instance=ExtResource("3_la6qn")]
custom_minimum_size = Vector2(32, 28)
layout_mode = 2
size_flags_vertical = 4
text = "0"
off_color = Color(0.165059, 0.206903, 0.234298, 1)
on_color = Color(0.551876, 0.606018, 0.676183, 1)

[node name="GlowButton1" parent="Layout/ShapeBox/Shapes" instance=ExtResource("3_la6qn")]
custom_minimum_size = Vector2(32, 28)
layout_mode = 2
size_flags_vertical = 4
text = "1"
off_color = Color(0.165059, 0.206903, 0.234298, 1)
on_color = Color(0.551876, 0.606018, 0.676183, 1)

[node name="GlowButton2" parent="Layout/ShapeBox/Shapes" instance=ExtResource("3_la6qn")]
custom_minimum_size = Vector2(32, 28)
layout_mode = 2
size_flags_vertical = 4
text = "2"
off_color = Color(0.165059, 0.206903, 0.234298, 1)
on_color = Color(0.551876, 0.606018, 0.676183, 1)

[node name="GlowButton3" parent="Layout/ShapeBox/Shapes" instance=ExtResource("3_la6qn")]
custom_minimum_size = Vector2(32, 28)
layout_mode = 2
size_flags_vertical = 4
text = "3"
off_color = Color(0.165059, 0.206903, 0.234298, 1)
on_color = Color(0.551876, 0.606018, 0.676183, 1)

[node name="GlowButton4" parent="Layout/ShapeBox/Shapes" instance=ExtResource("3_la6qn")]
custom_minimum_size = Vector2(32, 28)
layout_mode = 2
size_flags_vertical = 4
text = "4"
off_color = Color(0.165059, 0.206903, 0.234298, 1)
on_color = Color(0.551876, 0.606018, 0.676183, 1)

[node name="GlowButton5" parent="Layout/ShapeBox/Shapes" instance=ExtResource("3_la6qn")]
custom_minimum_size = Vector2(32, 28)
layout_mode = 2
size_flags_vertical = 4
text = "5"
off_color = Color(0.165059, 0.206903, 0.234298, 1)
on_color = Color(0.551876, 0.606018, 0.676183, 1)

[node name="GlowButton6" parent="Layout/ShapeBox/Shapes" instance=ExtResource("3_la6qn")]
custom_minimum_size = Vector2(32, 28)
layout_mode = 2
size_flags_vertical = 4
text = "6"
off_color = Color(0.165059, 0.206903, 0.234298, 1)
on_color = Color(0.551876, 0.606018, 0.676183, 1)

[node name="GlowButton7" parent="Layout/ShapeBox/Shapes" instance=ExtResource("3_la6qn")]
custom_minimum_size = Vector2(32, 28)
layout_mode = 2
size_flags_vertical = 4
text = "7"
off_color = Color(0.165059, 0.206903, 0.234298, 1)
on_color = Color(0.551876, 0.606018, 0.676183, 1)

[node name="GlowButton8" parent="Layout/ShapeBox/Shapes" instance=ExtResource("3_la6qn")]
custom_minimum_size = Vector2(32, 28)
layout_mode = 2
size_flags_vertical = 4
text = "8"
off_color = Color(0.165059, 0.206903, 0.234298, 1)
on_color = Color(0.551876, 0.606018, 0.676183, 1)

[node name="GlowButton9" parent="Layout/ShapeBox/Shapes" instance=ExtResource("3_la6qn")]
custom_minimum_size = Vector2(32, 28)
layout_mode = 2
size_flags_vertical = 4
text = "9"
off_color = Color(0.165059, 0.206903, 0.234298, 1)
on_color = Color(0.551876, 0.606018, 0.676183, 1)

[node name="ShapeKnob" parent="Layout/ShapeBox" instance=ExtResource("2_b8kmf")]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(320, 0)
layout_mode = 2

[node name="RatesBox" type="HBoxContainer" parent="Layout"]
layout_mode = 2

[node name="AttackKnob" parent="Layout/RatesBox" instance=ExtResource("3_fp7fs")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_7wdfr")
layout_mode = 2
size_flags_horizontal = 3
text = "AR"
knob_value = 32
max_value = 63
safe_max_value = 63

[node name="DecayKnob" parent="Layout/RatesBox" instance=ExtResource("3_fp7fs")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_lnbte")
layout_mode = 2
size_flags_horizontal = 3
text = "DR"
knob_value = 32
max_value = 63
safe_max_value = 63

[node name="SustainKnob" parent="Layout/RatesBox" instance=ExtResource("3_fp7fs")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_qqnui")
layout_mode = 2
size_flags_horizontal = 3
text = "SR"
knob_value = 32
max_value = 63
safe_max_value = 63

[node name="ReleaseKnob" parent="Layout/RatesBox" instance=ExtResource("3_fp7fs")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_66uhm")
layout_mode = 2
size_flags_horizontal = 3
text = "RR"
knob_value = 32
max_value = 63
safe_max_value = 63
